<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:clickable="true"
    tools:context="com.example.user.zippo.WorkHistoryFragment">

    <RelativeLayout
        android:id="@+id/relativeTeach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_alignParentLeft="true"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/WORK_EXPERIENCE"
            android:textColor="@color/WHITE"
            android:textSize="@dimen/font_size_medium" />

        <ImageView
            android:id="@+id/imageViewClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/offset"
            android:background="@drawable/selector_item_close"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/txtSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/offset"
            android:onClick="onClick"
            android:text="@string/SAVE"
            android:textColor="@color/WHITE"
            android:textSize="@dimen/font_size_medium" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeTeach">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relativeTeach"
            android:layout_marginBottom="@dimen/offset"
            android:layout_marginLeft="15dip"
            android:layout_marginTop="@dimen/offset">

            <EditText
                android:id="@+id/edtWorkName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/offset"
                android:hint="@string/WORK_NAME"
                android:inputType="textPersonName"
                android:textColorHint="@color/GHOSTWHITE" />

            <EditText
                android:id="@+id/edtCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtWorkName"
                android:layout_margin="@dimen/offset"
                android:hint="@string/COMPANY_NAME"
                android:inputType="textPersonName"
                android:textColorHint="@color/GHOSTWHITE" />

            <EditText
                android:id="@+id/edtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtCompanyName"
                android:layout_margin="@dimen/offset"
                android:hint="@string/LOCATION"
                android:inputType="textPersonName"
                android:textColorHint="@color/GHOSTWHITE" />

            <LinearLayout
                android:id="@+id/relativeDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/edtLocation"
                android:layout_margin="@dimen/offset"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtWorkStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/WORK_START"
                    android:inputType="textPersonName"
                    android:onClick="onClick"
                    android:focusable="false"
                    android:textColorHint="@color/GHOSTWHITE" />

                <EditText
                    android:id="@+id/edtWorkEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/WORK_END"
                    android:inputType="textPersonName"
                    android:onClick="onClick"
                    android:focusable="false"
                    android:textColorHint="@color/GHOSTWHITE" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtScribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeDate"
                android:layout_margin="@dimen/offset"
                android:hint="@string/WORK_SCRIBE"
                android:inputType="textPersonName"
                android:textColorHint="@color/GHOSTWHITE" />

        </RelativeLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fragment_container_working_history"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1" />

</RelativeLayout>
