<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:clickable="true"
    tools:context="com.example.user.zippo.PrivacyFragment">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_alignParentLeft="true"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/selector_item_close"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/PRIVACY_POLICY"
            android:textColor="@color/WHITE"
            android:textSize="@dimen/font_size_medium" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relative">

        <RelativeLayout
            android:id="@+id/relativeScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.5"
                android:padding="15dip"
                android:text="@string/privacy"
                android:textColor="@color/BLACK"
                android:textSize="@dimen/font_size_medium" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_below="@+id/txtContent"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:background="@color/BLACK" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:lineSpacingMultiplier="1.5"
                android:padding="15dip"
                android:text="@string/privacy1"
                android:textColor="@color/BLACK"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt1"
                android:lineSpacingMultiplier="1.5"
                android:paddingBottom="15dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:text="@string/privacy2"
                android:textColor="@color/BLACK"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt2"
                android:lineSpacingMultiplier="1.5"
                android:paddingBottom="15dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:text="@string/privacy3"
                android:textColor="@color/BLACK"
                android:textSize="@dimen/font_size_medium" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt3"
                android:gravity="center"
                android:lineSpacingMultiplier="1.5"
                android:paddingBottom="15dip"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:text="@string/privacy4"
                android:textSize="@dimen/font_size_medium" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
