<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/recyclerview_height"
    android:layout_marginLeft="5dip"
    android:layout_marginRight="5dip"
    android:layout_marginTop="5dip"
    android:layout_marginBottom="5dip"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/TITLE"
            android:textColor="@color/BLACK"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/date"
            android:layout_toRightOf="@+id/text"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/TITLE_NAME"
            android:textColor="@color/BLACK"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="@string/DATE"
            android:textColor="@color/BLACK"
            android:textSize="@dimen/font_size_medium" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
