<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:clickable="true"
    tools:context="com.example.user.zippo.TeachFragment">

    <RelativeLayout
        android:id="@+id/relativeTeach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_alignParentLeft="true"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/TECH_EXPERIENCE"
            android:textColor="@color/WHITE"
            android:textSize="@dimen/font_size_medium" />

        <ImageView
            android:id="@+id/imageViewClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/offset"
            android:background="@drawable/selector_item_close"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/txtSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/offset"
            android:onClick="onClick"
            android:text="@string/SAVE"
            android:textColor="@color/WHITE"
            android:textSize="@dimen/font_size_medium" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeTeach">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relativeTeach"
            android:layout_marginBottom="@dimen/offset"
            android:layout_marginLeft="15dip"
            android:layout_marginTop="@dimen/offset">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/SchoolNameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:errorTextAppearance="@style/Error"
                app:hintTextAppearance="@style/Hint">

                <EditText
                    android:id="@+id/edtSchoolName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/offset"
                    android:hint="@string/SCHOOL_NAME"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/GHOSTWHITE" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/SchoolDegreeWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SchoolNameWrapper"
                android:layout_marginTop="4dp"
                app:hintTextAppearance="@style/Hint">

                <EditText
                    android:id="@+id/edtSchoolDegree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="@dimen/offset"
                    android:hint="@string/SCHOOL_DEGREE"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/GHOSTWHITE" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/SchoolMainWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SchoolDegreeWrapper"
                android:layout_marginTop="4dp"
                app:hintTextAppearance="@style/Hint">

                <EditText
                    android:id="@+id/edtSchoolMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edtSchoolDegree"
                    android:layout_margin="@dimen/offset"
                    android:hint="@string/SCHOOL_MAIN"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/GHOSTWHITE" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/relativeSchool"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/SchoolMainWrapper"
                android:layout_margin="@dimen/offset"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/SchoolInWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/SchoolDegreeWrapper"
                    android:layout_weight="1"
                    app:hintTextAppearance="@style/Hint">

                    <EditText
                        android:id="@+id/edtSchoolIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/SCHOOL_IN"
                        android:inputType="textPersonName"
                        android:onClick="onClick"
                        android:focusable="false"
                        android:textColorHint="@color/GHOSTWHITE" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/SchoolOutWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/SchoolDegreeWrapper"
                    android:layout_weight="1"
                    app:hintTextAppearance="@style/Hint">

                    <EditText
                        android:id="@+id/edtSchoolOut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/SCHOOL_OUT"
                        android:inputType="textPersonName"
                        android:onClick="onClick"
                        android:focusable="false"
                        android:textColorHint="@color/GHOSTWHITE" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/GradeWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeSchool"
                android:layout_marginTop="4dp"
                app:hintTextAppearance="@style/Hint">

                <EditText
                    android:id="@+id/edtGrade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/offset"
                    android:hint="@string/GRADE"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/GHOSTWHITE" />

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
